--- a/configs.properties
+++ b/configs.properties
@@ -3,5 +3,5 @@ email_server = smtp.gmail.com
 email_port = 465
 
 [sender_email_details]
-email_address = nimish20vaibhav@gmail.com
-email_password = Macbookpro@2
+email_address = xxxx.xxxxxx@gmail.com
+email_password = xxxxxxxxx
